--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <h1 id="title"></h1>
+    
 <!--            JavaScript                  -->
 <script src="./js/myscript.js"></script>
     
