--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1 id="title"></h1>
-    
+    <div id="box">
+        <h1>Questa pagina crea...</h1>
+        <div id="box-j">
+             puoi creare 
+        </div>
+    </div>
+
 <!--            JavaScript                  -->
 <script src="./js/myscript.js"></script>
     
