--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 </head>
 <body>
     <div id="box">
-        <h1>Questa pagina crea...</h1>
+        <h1>La password generata è</h1>
         <div id="box-j">
-             puoi creare 
         </div>
     </div>
 
